# tonic-web-example

./: .gitignore  LICENSE  README.md
client/: .env  .gitignore  index.html  package.json  pnpm-lock.yaml
client/src/: App.vue  client.ts  main.css  style.css
client/src/components/: EchoSection.vue  MathSection.vue
proto/: grpc-web.proto
server/: .env  Cargo.toml  build.rs
server/src/: main.rs
