[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-web = "0.14.3"
tokio = {version = "1.49.0", features = ["rt-multi-thread"]}
tower-http = {version = "0.6.8", features = ["cors"]}
dotenvy = {version = "0.15.7", features = ["cli"]}
serde = {version = "1.0.228", features = ["derive"]}

[build-dependencies]
tonic-prost-build = "0.14.3"